--- a/src/main/resources/templates/apps/business/platform/room/approvel/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/approvel/index.html
@@ -14,14 +14,14 @@
                     <div class="user_online" style="height:60px;">
                         <form class="layui-form" action="">
                             <div class="layui-form-item" style="position: relative">
-                                <label class="layui-form-label " style="display: block;margin-top:10px; text-align: center;width:50px">
-                                    用户名:
-                                </label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 65px;">用户名:</label>
+                                    <div class="layui-input-inline" style="width: 170px;">
+                                        <input type="text" id="rechange_name" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    </div>
                                 </div>
-                                <div class="layui-inline" style="margin-top: 10px;margin-left: -30px;">
-                                    <label class="layui-form-label">金额:</label>
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 75px;">金额:</label>
                                     <div class="layui-input-inline" style="width: 100px;">
                                         <input type="text" name="price_min" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
@@ -30,8 +30,8 @@
                                         <input type="text" name="price_max" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
-                                <div class="layui-inline" style="margin-top: 10px;margin-left: -40px;">
-                                    <label class="layui-form-label">申请时间:</label>
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 75px;">申请时间:</label>
                                     <div class="layui-input-inline" style="width: 100px;">
                                         <input type="text" name="price_min" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
@@ -40,24 +40,19 @@
                                         <input type="text" name="price_max" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
-                                <div class="layui-form-item" style="position: absolute;left:880px;top:10px">
+                                <div class="layui-inline" style="margin:10px -60px;">
                                     <label class="layui-form-label">状态</label>
                                     <div class="layui-input-inline">
                                         <select name="quiz1">
                                             <option value="全部" selected="">全部</option>
                                             <option value="审核">审核</option>
                                             <option value="未审核">未审核</option>
-                                        </select>
+                                        </select><div class="layui-unselect layui-form-select"><div class="layui-select-title"><input type="text" placeholder="请选择" value="全部" readonly="" class="layui-input layui-unselect"><i class="layui-edge"></i></div><dl class="layui-anim layui-anim-upbit" style=""><dd lay-value="全部" class="layui-this">全部</dd><dd lay-value="审核" class="">审核</dd><dd lay-value="未审核" class="">未审核</dd></dl></div>
                                     </div>
                                 </div>
-                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="submit" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left: -230px;border-radius: 3px">
+                                <div class="layui-inline" style="margin: 10px 100px;">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal" onclick="queryTj();" type="button" style="display: block;width:70px;border-radius: 3px">
                                         查询
-                                    </button>
-                                </div>
-                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="button" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;border-radius: 3px">
-                                        审核通过
                                     </button>
                                 </div>
                             </div>
@@ -97,43 +92,37 @@
         var table = layui.table;
     });
 
-    (function () {
-        var getListUrl = '';
-        var tableOptions = {
-            url: getListUrl, //请求地址
-            method: 'POST', //方式
-            id: 'box', //生成 Layui table 的标识 id
-            page: false, //是否分页
-            where: { type: "all" }, //请求后端接口的条件type
-            response: {
-                statusName: 'Code', //状态字段名称
-                statusCode: '200', //状态字段成功值
-                msgName: 'Message', //消息字段
-                countName: 'Total', //总数字段
-                dataName: 'Result' //数据字段
-            }
-        };
-        layui.use(['table', 'layer'], function () {
-            var layer = layui.layer, table = layui.table;
-
-            //表初始化
-            var createTable = function () {
-                table.init('EditListTable', tableOptions);
-            };
-
-            //表刷新方法
-            var reloadTable = function (item) {
-                table.reload("listReload", { //此处是上文提到的 初始化标识id
-                    where: {
-                        //key: { //该写法上文已经提到
-                        type: item.type, id: item.id
-                        //}
-                    }
-                });
-            };
-            createTable();
-
+    //搜索框代码
+    var table;
+    var tableIns;
+    //后台数据
+    layui.use('table', function(){
+        table = layui.table;
+        tableIns = table.render({
+            elem:'#recharge_table',
+            url:'/presentapp/findPresentappList?userName=',
+            page:true,
+            id:'test',
+            cols:  [[ //标题栏
+                {field:'id', width:260 , title:'编码'},
+                {field:'applicationNum',width:260 , title:'申请单号'},
+                {field:'userName',width:260 , title:'用户名'},
+                {field:'invitationCode',width:260 , title:'邀请码'},
+                {field:'presentAppTime',width:260 , title:'申请提现时间'},
+                {field:'amountMoney',width:262 , title:'金额'},
+                {field:'preState',width:262 , title:'状态'}
+            ]]
         });
-    })();
+    });
+    function queryTj(){
+        var txt=$("#rechange_name").val();
+        tableIns.reload({
+            url:'/presentapp/findPresentappList',
+            where: { //设定异步数据接口的额外参数，任意设
+                userName:txt,
+            }
+        });
+    }
+
 </script>
 
