--- a/src/main/resources/templates/apps/business/platform/room/management/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/management/index.html
@@ -13,20 +13,20 @@
                     <div class="user_online" style="height:60px;">
                         <form class="layui-form" action="">
                             <div class="layui-form-item" style="position: relative">
-                                <label class="layui-form-label " style="display: block;margin-top:10px; text-align: center;width:50px">
-                                    用户名:
-                                </label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" id="managesnames" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 65px;">用户名:</label>
+                                    <div class="layui-input-inline" style="width: 170px;">
+                                        <input type="text" id="rechange_name" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    </div>
                                 </div>
-                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align: center;width:80px">
-                                    邀请码:
-                                </label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" id="codes" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 65px;">邀请码:</label>
+                                    <div class="layui-input-inline" style="width: 170px;">
+                                        <input type="text" id="rechange_code" name="title" required lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    </div>
                                 </div>
-                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button id="btn" class="layui-btn layui-btn-radius layui-btn-normal" style="display: block; float:left; width:100px; height:40px;position: absolute;top: 10px;left:700px;border-radius: 3px">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal" onclick="queryTj();" type="button" style="display: block;width:70px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -35,22 +35,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/promanagement/findProManagementList?page=0&limit=20', page:true, id:'test'}" lay-filter="test" id="box">
-                                <thead>
-                                <tr>
-                                    <th lay-data="{field:'id', width:260}">序号</th>
-                                    <th lay-data="{field:'userName',width:260}">用户名</th>
-                                    <th lay-data="{field:'invitationCode',width:260}">邀请码</th>
-                                    <th lay-data="{field:'getProAmount',width:260}">获得分润金额</th>
-                                    <th lay-data="{field:'nickName',width:260}">来源人姓名</th>
-                                    <th lay-data="{field:'gainTime',width:262}">获得时间</th>
-                                    <th lay-data="{field:'amountMoney',width:262}">提现金额</th>
-                                    <th lay-data="{field:'appTime',width:262}">提现时间</th>
-                                    <th lay-data="{field:'trtProfit',width:262}">分润剩余总额</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
+                            <table id="recharge_table" lay-filter="test">
                             </table>
                         </div>
                     </div>
@@ -70,27 +55,41 @@
         var table = layui.table;
     });
 
-    var userName = sessionStorage.getItem("managesnames");
-    var invitationCode = sessionStorage.getItem("codes");
-    if(userName !="" && invitationCode !=""){
-        document.getElementById("managesnames").value = userName;
-        document.getElementById("codes").value = invitationCode;
-        var tablebox =document.getElementById("box").getAttribute("lay-data");
-        var tableboxUrl = "/promanagement/findProManagementList?page=0&limit=20&userName="+userName+"&invitationCode="+invitationCode;
-        document.getElementById("box").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
+    //搜索框代码
+    var table;
+    var tableIns;
+    layui.use('table', function(){
+        table = layui.table;
+        tableIns = table.render({
+            elem:'#recharge_table',
+            url:'/promanagement/findProManagementList?userName=&invitationCode=',
+            page:true,
+            id:'test',
+            cols:  [[ //标题栏
+                {field:'id', width:260 , title:'编码'},
+                {field:'userName',width:260 , title:'用户名'},
+                {field:'invitationCode',width:260 , title:'邀请码'},
+                {field:'getProAmount',width:260 , title:'获得分润金额'},
+                {field:'nickName',width:260 , title:'来源人姓名'},
+                {field:'gainTime',width:262 , title:'获得时间'},
+                {field:'amountMoney',width:262 , title:'提现金额'},
+                {field:'appTime',width:262 , title:'提现时间'},
+                {field:'trtProfit',width:262 , title:'分润剩余总额'}
+            ]]
+        });
+    });
+    function queryTj(){
+        var txt=$("#rechange_name").val();
+        var txtserach=$("#rechange_code").val();
+        tableIns.reload({
+            url:'/promanagement/findProManagementList',
+            where: { //设定异步数据接口的额外参数，任意设
+                userName:txt,
+                invitationCode: txtserach
+            }
+        });
     }
 
-    //搜索框代码
-    $(function(){
-        $("#btn").click(function(){
-            alert(1)
-            var txt=$("#managesnames").val();
-            var txtserach=$("#codes").val();
-            var userName = sessionStorage.setItem("managesnames",txt);
-            var invitationCode=sessionStorage.setItem("codes",txtserach);
-            location.reload();
-        });
-    })
 </script>
 
 
