--- a/src/main/resources/templates/apps/business/platform/room/recharge/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/recharge/index.html
@@ -14,20 +14,20 @@
                     <div class="user_online" style="height:60px;">
                         <form class="layui-form" action="">
                             <div class="layui-form-item" style="position: relative">
-                                <label class="layui-form-label " style="display: block;margin-top:10px; text-align: center;width:50px">
-                                    用户名:
-                                </label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
-                                </div>
-                                <label class="layui-form-label" style="display: block;margin-top:10px; text-align:center;width:80px;">
-                                    邀请码:
-                                </label>
-                                <div class="layui-input-block col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width:200px; display: block;float:left;">
-                                    <input type="text" name="title" required lay-verify="required" placeholder="" autocomplete="off" class="layui-input" style="margin-left: 20px;">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 65px;">用户名:</label>
+                                    <div class="layui-input-inline" style="width: 170px;">
+                                        <input type="text" id="rechange_name" name="title" required  lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    </div>
                                 </div>
                                 <div class="layui-inline" style="margin-top: 10px;">
-                                    <label class="layui-form-label">购买时间:</label>
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 65px;">邀请码:</label>
+                                    <div class="layui-input-inline" style="width: 170px;">
+                                        <input type="text" id="rechange_code" name="title" required lay-verify="required" placeholder="" autocomplete="off" class="layui-input">
+                                    </div>
+                                </div>
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <label class="layui-form-label" style="padding-left: 0px;width: 75px;">购买时间:</label>
                                     <div class="layui-input-inline" style="width: 100px;">
                                         <input type="text" name="price_min" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
@@ -36,8 +36,8 @@
                                         <input type="text" name="price_max" placeholder="" autocomplete="off" class="layui-input">
                                     </div>
                                 </div>
-                                <div class="boxs col-lg-2 col-md-2 col-sm-2 col-xs-1" style="width: 100px;height:40px;float:right;">
-                                    <button class="layui-btn layui-btn-radius layui-btn-normal" type="button" style="display: block; float:left; width:100px; height:40px;margin-top: 10px;margin-left:-400px;border-radius: 3px">
+                                <div class="layui-inline" style="margin-top: 10px;">
+                                    <button class="layui-btn layui-btn-radius layui-btn-normal" onclick="queryTj();" type="button" style="display: block;width:70px;border-radius: 3px">
                                         查询
                                     </button>
                                 </div>
@@ -46,23 +46,7 @@
                     </div>
                     <div class="row" style="padding:5px;">
                         <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/roomCard/getRechargeJson', page:true, id:'test'}" lay-filter="test">
-                                <thead style="width: 100%">
-                                <tr>
-                                    <th lay-data="{field:'id', width:180}">序号</th>
-                                    <th lay-data="{field:'userName',width:200}">用户名</th>
-                                    <th lay-data="{field:'invitationCode',width:200}">邀请码</th>
-                                    <th lay-data="{field:'rechargeTime',width:180}">充值时间</th>
-                                    <th lay-data="{field:'roomCount',width:180}">房卡数量</th>
-                                    <!--<th lay-data="{field:'originalPrice',width:140}">原价</th>-->
-                                    <!--<th lay-data="{field:'preferentialAmount',width:160}">优惠金额</th>-->
-                                    <th lay-data="{field:'payAmount',width:180}">支付金额</th>
-                                    <th lay-data="{field:'directlyTheLastAmount', width:220}">直接上家分润金额</th>
-                                    <th lay-data="{field:'indirectTheLastAmount', width:220}">间接上家分润金额</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
+                            <table id="recharge_table" lay-filter="test">
                             </table>
                         </div>
                     </div>
@@ -82,25 +66,40 @@
     });
 
 //搜索框代码
-    var userName = sessionStorage.getItem("recharge");
-    var invitationCode = sessionStorage.getItem("invitationCode");
-    if(userName !="" && invitationCode !=""){
-        document.getElementById("txtNames").value = userName;
-        document.getElementById("search").value = invitationCode;
-        var tablebox =document.getElementById("box").getAttribute("lay-data");
-        var tableboxUrl = "/roomCard/getToUseJson?userName="+userName+"&invitationCode="+invitationCode;
-        document.getElementById("box").setAttribute("lay-data","{height:640,url:'"+tableboxUrl+"', page:true, id:'test'}");
+    var table;
+    var tableIns;
+    //后台数据
+    layui.use('table', function(){
+        table = layui.table;
+        //lay-data="{url:'/roomCard/getRechargeJson', page:true, id:'test'}" class="layui-table"
+        tableIns = table.render({
+            elem:'#recharge_table',
+            url:'/roomCard/getRechargeJson?userName=&invitationCode=',
+            page:true,
+            id:'test',
+            cols:  [[ //标题栏
+                {field:'id', width:150 , title:'编码'},
+                {field:'userName',width:180 , title:'用户名'},
+                {field:'invitationCode',width:180 , title:'邀请码'},
+                {field:'rechargeTime',width:180 , title:'充值时间'},
+                {field:'roomCount',width:130 , title:'房卡数量'},
+                {field:'payAmount',width:130 , title:'支付金额'},
+                {field:'directlyTheLastAmount', width:180 , title:'直接上家分润金额'},
+                {field:'indirectTheLastAmount', width:180 , title:'间接上家分润金额'}
+            ]]
+        });
+    });
+    function queryTj(){
+        var txt=$("#rechange_name").val();
+        var txtserach=$("#rechange_code").val();
+        tableIns.reload({
+            url:'/roomCard/getRechargeJson',
+            where: { //设定异步数据接口的额外参数，任意设
+                userName:txt,
+                invitationCode: txtserach
+            }
+        });
     }
 
-
-    $(function(){
-        $("button[type=button]").click(function(){
-            var txt=$("#txtNames").val();
-            var txtserach=$("#search").val();
-            var userName = sessionStorage.setItem("recharge",txt);
-            var invitationCode=sessionStorage.setItem("invitationCode",txtserach);
-            location.reload();
-        });
-    })
 </script>
 
