--- a/src/main/resources/templates/apps/business/platform/room/approvel/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/approvel/index.html
@@ -58,25 +58,8 @@
                             </div>
                         </form>
                     </div>
-                    <div class="row" style="padding:5px;">
-                        <div class="col-lg-12">
-                            <table class="layui-table" lay-data="{height:640,url:'/presentapp/findPresentappList', page:true, id:'test'}" lay-filter="test" id="box">
-                                <thead style="width: 100%">
-                                <tr>
-                                    <th lay-data="{field:'id', width:140}">序号</th>
-                                    <th lay-data="{field:'applicationNum',width:140}">申请单号</th>
-                                    <th lay-data="{field:'userName',width:140}">用户名</th>
-                                    <th lay-data="{field:'invitationCode',width:160}">邀请码</th>
-                                    <th lay-data="{field:'presentAppTime',width:160}">申请提现时间</th>
-                                    <th lay-data="{field:'amountMoney',width:140}">金额</th>
-                                    <th lay-data="{field:'preState',width:160}">状态</th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+                    <table id="recharge_table" lay-filter="test">
+                    </table>
                 </div>
             </div>
         </div>
@@ -104,13 +87,13 @@
             page:true,
             id:'test',
             cols:  [[ //标题栏
-                {field:'id', width:260 , title:'编码'},
-                {field:'applicationNum',width:260 , title:'申请单号'},
-                {field:'userName',width:260 , title:'用户名'},
-                {field:'invitationCode',width:260 , title:'邀请码'},
-                {field:'presentAppTime',width:260 , title:'申请提现时间'},
-                {field:'amountMoney',width:262 , title:'金额'},
-                {field:'preState',width:262 , title:'状态'}
+                {field:'id', width:220 , title:'编码'},
+                {field:'applicationNum',width:220 , title:'申请单号'},
+                {field:'userName',width:220 , title:'用户名'},
+                {field:'invitationCode',width:220 , title:'邀请码'},
+                {field:'presentAppTime',width:220 , title:'申请提现时间'},
+                {field:'amountMoney',width:220 , title:'金额'},
+                {field:'preState',width:220 , title:'状态'}
             ]]
         });
     });
