--- a/src/main/resources/templates/apps/business/platform/room/management/index.html
+++ b/src/main/resources/templates/apps/business/platform/room/management/index.html
@@ -33,12 +33,8 @@
                             </div>
                         </form>
                     </div>
-                    <div class="row" style="padding:5px;">
-                        <div class="col-lg-12">
-                            <table id="recharge_table" lay-filter="test">
-                            </table>
-                        </div>
-                    </div>
+                    <table id="recharge_table" lay-filter="test">
+                    </table>
                 </div>
             </div>
         </div>
@@ -62,19 +58,19 @@
         table = layui.table;
         tableIns = table.render({
             elem:'#recharge_table',
-            url:'/promanagement/findProManagementList?userName=&invitationCode=',
+            url:'/promanagement/findProManagementList',
             page:true,
             id:'test',
             cols:  [[ //标题栏
-                {field:'id', width:260 , title:'编码'},
-                {field:'userName',width:260 , title:'用户名'},
-                {field:'invitationCode',width:260 , title:'邀请码'},
-                {field:'getProAmount',width:260 , title:'获得分润金额'},
-                {field:'nickName',width:260 , title:'来源人姓名'},
-                {field:'gainTime',width:262 , title:'获得时间'},
-                {field:'amountMoney',width:262 , title:'提现金额'},
-                {field:'appTime',width:262 , title:'提现时间'},
-                {field:'trtProfit',width:262 , title:'分润剩余总额'}
+                {field:'id', width:170 , title:'编码'},
+                {field:'userName',width:170 , title:'用户名'},
+                {field:'invitationCode',width:170 , title:'邀请码'},
+                {field:'getProAmount',width:170 , title:'获得分润金额'},
+                {field:'nickName',width:170 , title:'来源人姓名'},
+                {field:'gainTime',width:170 , title:'获得时间'},
+                {field:'amountMoney',width:170 , title:'提现金额'},
+                {field:'appTime',width:170 , title:'提现时间'},
+                {field:'trtProfit',width:170 , title:'分润剩余总额'}
             ]]
         });
     });
